home image change

--- a/public/index.html
+++ b/public/index.html
@@ -101,24 +101,82 @@
                             >
                                 <h1>BY Powders Meet <br> <b>AAMA</b> Standards </h1>
                             </div>
-<!--
-                            <div class="caption sfr sfb tp-resizeme p-tag text-center"
+
+                        </li>
+
+                        <li
+                            class="slider-2"
+                            data-transition="fade"
+                            data-slotamount="7">
+
+                            <img
+                                src="img/slider/home2.png"
+                                data-bgrepeat="no-repeat"
+                                data-bgfit="cover"
+                                data-bgposition="center center"
+                                alt="slider image">
+
+
+                           <div class="caption sfl sfb tp-resizeme caption-bold-heading text-center"
                             data-x="0"
-                            data-y="470"
-                            data-speed="1500"
-                            data-start="2000"
-                            data-easing="easeOutBack"
+                            data-y="0"
                             >
-                                <p>We offer High-Quality powder Coatings.</p>
-                            </div> -->
+                                <h1>Make Every <br>
+                                <b>SELECTION</b> Count </h1>
+                            </div>
+
+                        </li>
+
+                        <li
+                            class="slider-3"
+                            data-transition="fade"
+                            data-slotamount="7">
+
+                            <img
+                                src="img/slider/home3.png"
+                                data-bgrepeat="no-repeat"
+                                data-bgfit="cover"
+                                data-bgposition="center center"
+                                alt="slider image">
+
+
+                           <div class="caption sfl sfb tp-resizeme caption-bold-heading text-center"
+                            data-x="0"
+                            data-y="0"
+                            >
+                                <h1><b>QUALITY CONTROL</b> <br>
+                                Is the Key to Success </h1>
+                            </div>
+
+                        </li>
+
+                        <li
+                            class="slider-4"
+                            data-transition="fade"
+                            data-slotamount="7">
+
+                            <img
+                                src="img/slider/home4.png"
+                                data-bgrepeat="no-repeat"
+                                data-bgfit="cover"
+                                data-bgposition="center center"
+                                alt="slider image">
+
+
+                           <div class="caption sfl sfb tp-resizeme caption-bold-heading text-center"
+                            data-x="0"
+                            data-y="0"
+                            >
+                                <h1><b>SERVICE</b> <br>
+                                will solve all <br>of your troubles</h1>
+                            </div>
 
                         </li>
 <!--
                         <li
                             class="slider-2"
                             data-transition="fade"
-                            data-slotamount="7"
-                            data-title="SELECTIONS">
+                            data-slotamount="7">
 
                             <img
                                 src="img/slider/home2.png"
@@ -283,10 +341,10 @@
             	<div class="row">
                 	<div class="col-lg-8 col-md-4 col-sm-6 col-xs-12">
                         <div class="widget-social-links">
-                            <a href=""><i class="fa fa-facebook mysocial_style"></i></a>
-                            <a href=""><i class="fa fa-twitter mysocial_style"></i></a>
-                            <a href=""><i class="fa fa-google-plus mysocial_style"></i></a>
-                            <a href=""><i class="fa fa-linkedin mysocial_style"></i></a>
+                            <a><i class="fa fa-facebook mysocial_style"></i></a>
+                            <a><i class="fa fa-twitter mysocial_style"></i></a>
+                            <a><i class="fa fa-google-plus mysocial_style"></i></a>
+                            <a><i class="fa fa-linkedin mysocial_style"></i></a>
                         </div>
                     	<div class="copy-right-text">
                         	<p>Copyright © Legal Power 2015. All rights reserved. </p>
