change header image/footer icons/page titles

--- a/public/pantone_color.html
+++ b/public/pantone_color.html
@@ -72,30 +72,14 @@
             </header>
         <!--End Top section-->
 
-        <!--Start Breadcrumb Text area-->
-        <section class="breadcrumb-area">
-            <div class="breadcrumb-text-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="breadcrumb-text text-center">
-                                <h1>Blog Left</h1>
-                                <ul class="breadcrumbs">
-                                   <li><a href="#">Home</a><i class="fa fa-angle-right"></i></li>
-                                   <li><a href="#">Blog Left</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section>
             <div class="container">
+                <div class="section-title" style="margin-top: 60px;">
+                    <h2><span>Pantone Color Chart</span></h2>
+                </div>
                 <div class="row">
                     <div class="color-table">
-                        <table style="margin: 60px;">
+                        <table>
   <tbody>
   <tr>
     <td style="padding: 2px; width: 150px; color: black; vertical-align: top; cursor: pointer; background-color: rgb(244, 237, 124);" onclick="paintDetails(5892);"><small><small></small></small>
@@ -4757,94 +4741,33 @@
             </div>
         </section>
 
-        <!--Start Footer widget area-->
-        <section id="footer-widget-area">
-        	<div class="container">
-            	<div class="row">
-                	<!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="footer-logo">
-                            	<img src="img/footer-logo.png" alt="">
-                            </div>
-                            <div class="widget-text">
-                            	<p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad veniam, quis no strud exercitation.</p>
-                            </div>
-
-                            <div class="footer-read-more">
-                            	<a href="">Read More <i class="fa fa-angle-right"></i><i class="fa fa-angle-right"></i></a>
-                            </div>
-                            <div class="widget-social-links">
-                            	<a href=""><i class="fa fa-facebook mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-twitter mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-google-plus mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-linkedin mysocial_style"></i></a>
-                            </div>
+          <section id="footer-area">
+            <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 col-md-4 col-sm-6 col-xs-12">
+                        <div class="widget-social-links">
+                            <a><i class="fa fa-facebook mysocial_style"></i></a>
+                            <a><i class="fa fa-twitter mysocial_style"></i></a>
+                            <a><i class="fa fa-google-plus mysocial_style"></i></a>
+                            <a><i class="fa fa-linkedin mysocial_style"></i></a>
+                        </div>
+                      <div class="copy-right-text">
+                          <p>Copyright © Legal Power 2015. All rights reserved. </p>
                         </div>
                     </div>
-                    <!--End Single Footer widget-->
-                    <!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="quick-links">
-                            	<h3>Quick links</h3>
-                                <ul class="left-quick-links alignleft">
-                                	<li><i class="fa fa-angle-right"></i><a href="">Criminal Injury Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Divorce Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Industrial Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Insurance Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Family and Child Law</a></li>
-                                </ul>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <div class="single-footer-widget">
+                            <div class="widget-get-intouch">
                                 <ul>
-                                	<li><i class="fa fa-angle-right"></i><a href="">Criminal Injury Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Divorce Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Industrial Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Insurance Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Family and Child Law</a></li>
+                                    <li class="phone">+1 780-243-6277</li>
+                                    <li class="envelop">bpowdercoatings@gmail.com</li>
                                 </ul>
                             </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-                    <!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="widget-get-intouch">
-                            	<h3>Get in Touch</h3>
-                            	<ul>
-                                	<li class="location">Lorance Road 542B, Tailstoi Town 5248 MT, Wordwide Country</li>
-                                    <li class="phone">01865 524 8503</li>
-                                    <li class="envelop">contact@legalpower.com</li>
-                                    <li class="website">http://legalpower.com</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-
-                </div>
-            </div>
-        </section>
-        <!--End Footer widget area-->
-
-        <!--Start Footer area-->
-        <section id="footer-area">
-        	<div class="container">
-            	<div class="row">
-                	<div class="col-lg-5">
-                    	<div class="copy-right-text">
-                        	<p>Copyright © Legal Power 2015. All rights reserved. </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-lg-offset-5">
-                        <div class="created-text">
-                            <p>Created by: <a href="">DesignArc</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!--End Footer area-->
 
 
 
