change nav color

--- a/public/contact.html
+++ b/public/contact.html
@@ -33,7 +33,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-<header class="stricky anim-5-all stricky-fixed" style="background: #069">
+<header class="stricky anim-5-all stricky-fixed">
             <div class="container">
                 <div class="logo pull-left">
                     <a href="index.html">
