--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
  		<!--Start Top section-->
-		<header class="stricky anim-5-all stricky-fixed" style="background: #069">
+		<header class="stricky anim-5-all stricky-fixed">
             <div class="container">
                 <div class="logo pull-left">
                     <a href="index.html">
