about us dropdowns

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,16 @@
                     <div class="nav-holder">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT US</a></li>
+                            <li class="dropdown">
+                                <a href="about.html">ABOUT US</a>
+                                <ul>
+                                    <li><a href="about.html">Our Mission</a></li>
+                                    <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                    <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                    <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                    <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
+                                </ul>
+                            </li>
                             <li class="dropdown">
                                 <a href="products.html#polyester">PRODUCTS</a>
                                 <ul class="submenu">
@@ -48,10 +57,11 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="ral_color.html">COLOR</a>
+                                <a href="beyond-color.html">COLOR</a>
                                 <ul class="submenu">
-                                    <li><a href="ral_color.html">RAL Color</a></li>
-                                    <li><a href="pantone_color.html">Pantone Color</a></li>
+                                    <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                    <li><a href="ral_color.html">RAL COLOR</a></li>
+                                    <li><a href="pantone_color.html">PANTONE COLOR</a></li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">CONTACT US</a></li>
