--- a/public/contact.html
+++ b/public/contact.html
@@ -44,7 +44,16 @@
                     <div class="nav-holder">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT US</a></li>
+                            <li class="dropdown">
+                                <a href="about.html">ABOUT US</a>
+                                <ul>
+                                    <li><a href="about.html">Our Mission</a></li>
+                                    <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                    <li><a href="about.html">Our Mission</a></li>
+                                    <li><a href="about.html">Our Mission</a></li>
+                                    <li><a href="about.html">Our Mission</a></li>
+                                </ul>
+                            </li>
                             <li class="dropdown">
                                 <a href="products.html#polyester">PRODUCTS</a>
                                 <ul class="submenu">
@@ -81,25 +90,6 @@
             </div>
         </header>
         <!--End Top section-->
-
-        <!--Start Breadcrumb Text area-->
-        <section class="breadcrumb-area">
-            <div class="breadcrumb-text-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="breadcrumb-text text-center">
-                                <h1>Contact</h1>
-                                <ul class="breadcrumbs">
-                                   <li><a href="#">Home</a><i class="fa fa-angle-right"></i></li>
-                                   <li><a href="#">Contact</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
 		<!--Start contact area-->
    		<section id="contact-area" class="anim-5-all">
