fix UI issues, dropdown color, etc

--- a/public/color-matching.html
+++ b/public/color-matching.html
@@ -79,7 +79,7 @@
             	<div class="row">
                 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     	<div class="mission-vision-left-img">
-                        	<!-- <img src="img/aboutus/1.png" alt=""> -->
+                        	<img src="img/aboutus/about-us2.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
