--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,8 @@
                             data-y="0"
                             >
                                 <h1>BY Powders Meet <br> <b>AAMA</b> Standards </h1>
+                                <br>
+                                <a href="aama-standards.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
 
                         </li>
@@ -133,6 +135,8 @@
                             >
                                 <h1>Make Every <br>
                                 <b>SELECTION</b> Count </h1>
+                                <br>
+                                <a href="color-matching.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
 
                         </li>
@@ -156,6 +160,8 @@
                             >
                                 <h1><b>QUALITY CONTROL</b> <br>
                                 Is the Key to Success </h1>
+                                <br>
+                                <a href="quality-control.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
 
                         </li>
@@ -179,6 +185,8 @@
                             >
                                 <h1><b>SERVICE</b> <br>
                                 will solve all <br>of your troubles</h1>
+                                <br>
+                                <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
 
                         </li>
