--- a/public/our-service-theory.html
+++ b/public/our-service-theory.html
@@ -73,36 +73,13 @@
                 </div>
             </div>
         </header>
-        <!--End Top section-->
 
-		<!--Start Breadcrumb Text area-->
-<!--         <section class="breadcrumb-area">
-            <div class="breadcrumb-text-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="breadcrumb-text text-center">
-                                <h1>about us</h1>
-                                <ul class="breadcrumbs">
-                                   <li><a href="#">Home</a><i class="fa fa-angle-right"></i></li>
-                                   <li><a href="#">About us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-        <!--End Breadcrumb Text area-->
-
-        <!--Start Mission and vision area-->
         <section id="mission-vision-area">
         	<div class="container">
             	<div class="row">
                 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     	<div class="mission-vision-left-img">
-                        	<!-- <img src="img/aboutus/1.png" alt=""> -->
+                        	<img src="img/aboutus/about-us3.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
